# TTM4905-Code

./: .dockerignore  .gitignore  Dockerfile.django  Dockerfile.rocket  README.md  docker-compose.yml
.github/workflows/: backend_formatting.yml  docker-image.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt  run.sh  uwsgi.ini
backend/backend/: api.py  settings.py  urls.py
backend/backend/backend/: settings.py  urls.py
backend/backend/settings/: __init__.py  base.py  dev.py  prod.py
backend/backend/users/: api.py
backend/backend/utils/: schema.py
backend/data/: pubkeys.json  users.json
backend/pubkeys/: api.py  apps.py  models.py  schema.py
backend/pubkeys/migrations/: 0001_initial.py
backend/users/: models.py  schema.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
rocket/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  run.sh
rocket/migrations/2024-03-20-121659_users/: down.sql  up.sql
rocket/migrations/2024-04-04-110159_proofs/: down.sql  up.sql
rocket/migrations/2024-04-19-222554_models/: down.sql  up.sql
rocket/src/: main.rs  schema.rs
rocket/src/api/: mod.rs  user_api.rs  zk_api.rs
rocket/src/models/: mod.rs  user_models.rs  zk_models.rs
rocket/src/repository/: mod.rs  repo_backup.rs  user_repository.rs  zk_repository.rs
rocket/src/services/: mod.rs  user_service.rs  zk_service.rs
sp1/: .gitignore  README.md
sp1/auxiliary/: Cargo.toml
sp1/auxiliary/src/: main.rs
sp1/ecdsa/keys/: public_2.pem  secret_2.pem  statoil.sig  statoil.txt
sp1/ecdsa/src/: main.rs
sp1/eddsa/: Cargo.toml
sp1/eddsa/keys/: big_bertha.sig  lorem.sig  lorem.txt  message.txt  message.txt.sig  private_key.pem  public_key.pem  small_bertha.sig  small_bertha.txt
sp1/program/: Cargo.toml
sp1/script/: Cargo.toml
sp1/script/src/: main.rs
sp1/verify/: Cargo.toml
(+12 files in other folders)
