cargo-features = ["edition2024"]

[package]
name = "auxiliary"
version = "0.1.0"
edition = "2024"
## reqwest, tokio, serde, serde_json

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
