[workspace]
[package]
version = "0.1.0"
name = "sp1-script"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/t0rs/sp1-privacy.git" }
sp1-core = { git = "https://github.com/t0rs/sp1-privacy.git" }
ed25519-dalek = {git = "https://github.com/sp1-patches/curve25519-dalek", features = ["pkcs8","pem"]}
pem = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"